attached_assets/Pasted--FAIL-store-tests-taskStore-test-ts-taskStore-should-initialize-with-empty-tasks-Typ-1741995508165.txt
 FAIL  store/__tests__/taskStore.test.ts
  ● taskStore › should initialize with empty tasks

    TypeError: (0 , _taskStore.createTaskStore) is not a function

      93 | describe('taskStore', () => {
      94 |   it('should initialize with empty tasks', () => {
    > 95 |     const store = createTaskStore();
         |                                  ^
      96 |     expect(store.getState().tasks).toEqual([]);
      97 |   });
      98 | });

      at Object.<anonymous> (store/__tests__/taskStore.test.ts:95:34)

 PASS  utils/errors/__tests__/errorUtils.test.ts
 FAIL  components/__tests__/ThemedText.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    SyntaxError: /home/runner/workspace/components/__tests__/ThemedText.test.tsx: Identifier 'React' has already been declared. (12:7)

      10 |   });
      11 | });
    > 12 | import React from 'react';
         |        ^
      13 | import { render } from '@/utils/test-utils';
      14 | import ThemedText from '../ThemedText';
      15 |

      at constructor (node_modules/@babel/parser/src/parse-error.ts:95:45)
      at TypeScriptParserMixin.toParseError [as raise] (node_modules/@babel/parser/src/tokenizer/index.ts:1497:19)
      at TypeScriptScopeHandler.raise [as checkRedeclarationInScope] (node_modules/@babel/parser/src/util/scope.ts:155:19)
      at TypeScriptScopeHandler.checkRedeclarationInScope (node_modules/@babel/parser/src/util/scope.ts:109:12)
      at TypeScriptScopeHandler.declareName (node_modules/@babel/parser/src/plugins/typescript/scope.ts:89:11)
      at TypeScriptParserMixin.declareName [as declareNameFromIdentifier] (node_modules/@babel/parser/src/parser/lval.ts:739:16)
      at TypeScriptParserMixin.declareNameFromIdentifier [as checkIdentifier] (node_modules/@babel/parser/src/parser/lval.ts:734:12)
      at TypeScriptParserMixin.checkIdentifier [as checkLVal] (node_modules/@babel/parser/src/parser/lval.ts:636:12)
      at TypeScriptParserMixin.checkLVal [as finishImportSpecifier] (node_modules/@babel/parser/src/parser/statement.ts:3185:10)
      at TypeScriptParserMixin.finishImportSpecifier [as parseImportSpecifierLocal] (node_modules/@babel/parser/src/parser/statement.ts:3172:31)
      at TypeScriptParserMixin.parseImportSpecifierLocal [as maybeParseDefaultImportSpecifier] (node_modules/@babel/parser/src/parser/statement.ts:3356:12)
      at TypeScriptParserMixin.maybeParseDefaultImportSpecifier [as parseImportSpecifiersAndAfter] (node_modules/@babel/parser/src/parser/statement.ts:3120:29)
      at TypeScriptParserMixin.parseImportSpecifiersAndAfter (node_modules/@babel/parser/src/parser/statement.ts:3105:17)
      at TypeScriptParserMixin.parseImport (node_modules/@babel/parser/src/plugins/typescript/index.ts:2895:28)
      at TypeScriptParserMixin.parseImport (node_modules/@babel/parser/src/parser/statement.ts:601:25)
      at TypeScriptParserMixin.parseStatementContent (node_modules/@babel/parser/src/plugins/typescript/index.ts:3056:20)
      at TypeScriptParserMixin.parseStatementContent [as parseStatementLike] (node_modules/@babel/parser/src/parser/statement.ts:437:17)
      at TypeScriptParserMixin.parseStatementLike [as parseModuleItem] (node_modules/@babel/parser/src/parser/statement.ts:374:17)
      at TypeScriptParserMixin.parseModuleItem [as parseBlockOrModuleBlockBody] (node_modules/@babel/parser/src/parser/statement.ts:1419:16)
      at TypeScriptParserMixin.parseBlockOrModuleBlockBody [as parseBlockBody] (node_modules/@babel/parser/src/parser/statement.ts:1393:10)
      at TypeScriptParserMixin.parseBlockBody [as parseProgram] (node_modules/@babel/parser/src/parser/statement.ts:225:10)
      at TypeScriptParserMixin.parseProgram [as parseTopLevel] (node_modules/@babel/parser/src/parser/sta...